5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4327/executions/1760_1576.log
== TEST (2019-05-29 15:41:24) 
-- CODE:
from numpy import*

e=array(eval(input("sequencia de eusabia")))
b=array(eval(input("sequencia de eusabia")))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 16:13:05) 
-- CODE:
from numpy import*

e=array(eval(input("sequencia de eusabia; ")))
b=array(eval(input("sequencia de ")))
i=0
ce=0
cb=0
while (i<sine(e)):
	if ((e[i]==11)and(b[i]==22):
		 cb=cb+1
	elif ((e[i]==11)and(b[1]==33):
		 ce=ce+1
	elif ((e[i]==22)and(b[i]==11):
		 ce=ce+1
	elif ((e[i]==22)and(b[i]==33):
		 cb=cb+1
	elif ((e[i]==33)and(b[i]==11):
		 cb=cb+1
	elif ((e[i]==33)and(b[i]==22):
		 ce=ce+1
	elif ((e[i]==33)and(b[i]==22):
			ce=ce+0
			cb=cb+0
print (size(e))
if(ce>cb):
			
			
-- ERROR:
File "XXXX", line 9
    if ((e[i]==11)and(b[i]==22):
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 16:13:53) 
-- CODE:
from numpy import*

e=array(eval(input("sequencia de eusabia; ")))
b=array(eval(input("sequencia de ")))
i=0
ce=0
cb=0
while (i<sine(e)):
	if ((e[i]==11)and(b[i]==22):
		 cb=cb+1
	elif ((e[i]==11)and(b[1]==33):
		 ce=ce+1
	elif ((e[i]==22)and(b[i]==11):
		 ce=ce+1
	elif ((e[i]==22)and(b[i]==33):
		 cb=cb+1
	elif ((e[i]==33)and(b[i]==11):
		 cb=cb+1
	elif ((e[i]==33)and(b[i]==22):
		 ce=ce+1
	elif ((e[i]==33)and(b[i]==22):
			ce=ce+0
			cb=cb+0
print (size(e))
if(ce>cb):
			
			
-- ERROR:
File "XXXX", line 9
    if ((e[i]==11)and(b[i]==22):
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 16:16:42) 
-- CODE:
from numpy import*

e=array(eval(input("sequencia de eusabia; ")))
b=array(eval(input("sequencia de barsavo ")))
i=0
ce=0
cb=0
while (i<sine(e)):
	if ((e[i]==11)and(b[i]==22):
		 cb=cb+1
	elif ((e[i]==11)and(b[1]==33):
		 ce=ce+1
	elif ((e[i]==22)and(b[i]==11):
		 ce=ce+1
	elif ((e[i]==22)and(b[i]==33):
		 cb=cb+1
	elif ((e[i]==33)and(b[i]==11):
		 cb=cb+1
	elif ((e[i]==33)and(b[i]==22):
		 ce=ce+1
	elif ((e[i]==33)and(b[i]==22):
			ce=ce+0
			cb=cb+0
print (size(e))
if(ce>cb):
	print("EUSAPIA")
elif(cb>ce):
	print("BARSANULFO")
else:
	print("EMPATE")
	
			
-- EXECUTION TIME:
0.136818
-- ERROR:
  File "/home/codebench/codes/1760/1576/main.py", line 9
    if ((e[i]==11)and(b[i]==22):
                               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 16:16:47) 
-- CODE:
from numpy import*

e=array(eval(input("sequencia de eusabia; ")))
b=array(eval(input("sequencia de barsavo ")))
i=0
ce=0
cb=0
while (i<sine(e)):
	if ((e[i]==11)and(b[i]==22):
		 cb=cb+1
	elif ((e[i]==11)and(b[1]==33):
		 ce=ce+1
	elif ((e[i]==22)and(b[i]==11):
		 ce=ce+1
	elif ((e[i]==22)and(b[i]==33):
		 cb=cb+1
	elif ((e[i]==33)and(b[i]==11):
		 cb=cb+1
	elif ((e[i]==33)and(b[i]==22):
		 ce=ce+1
	elif ((e[i]==33)and(b[i]==22):
			ce=ce+0
			cb=cb+0
print (size(e))
if(ce>cb):
	print("EUSAPIA")
elif(cb>ce):
	print("BARSANULFO")
else:
	print("EMPATE")
	
			
-- ERROR:
File "XXXX", line 9
    if ((e[i]==11)and(b[i]==22):
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 16:17:24) 
-- CODE:
from numpy import*

e=array(eval(input("sequencia de eusabia; ")))
b=array(eval(input("sequencia de barsavo ")))
i=0
ce=0
cb=0
while (i<sine(e)):
	if((e[i]==11)and(b[i]==22):
		 cb=cb+1
	elif((e[i]==11)and(b[1]==33):
		 ce=ce+1
	elif((e[i]==22)and(b[i]==11):
		 ce=ce+1
	elif((e[i]==22)and(b[i]==33):
		 cb=cb+1
	elif ((e[i]==33)and(b[i]==11):
		 cb=cb+1
	elif((e[i]==33)and(b[i]==22):
		 ce=ce+1
	elif((e[i]==33)and(b[i]==22):
			ce=ce+0
			cb=cb+0
print (size(e))
if(ce>cb):
	print("EUSAPIA")
elif(cb>ce):
	print("BARSANULFO")
else:
	print("EMPATE")
	
			
-- ERROR:
File "XXXX", line 9
    if((e[i]==11)and(b[i]==22):
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 16:17:50) 
-- CODE:
from numpy import*

e=array(eval(input("sequencia de eusabia; ")))
b=array(eval(input("sequencia de barsavo ")))
i=0
ce=0
cb=0

while (i<size(e)):
	if((e[i]==11)and(b[i]==22):
		 cb=cb+1
	elif((e[i]==11)and(b[1]==33):
		 ce=ce+1
	elif((e[i]==22)and(b[i]==11):
		 ce=ce+1
	elif((e[i]==22)and(b[i]==33):
		 cb=cb+1
	elif ((e[i]==33)and(b[i]==11):
		 cb=cb+1
	elif((e[i]==33)and(b[i]==22):
		 ce=ce+1
	elif((e[i]==33)and(b[i]==22):
			ce=ce+0
			cb=cb+0
print (size(e))
if(ce>cb):
	print("EUSAPIA")
elif(cb>ce):
	print("BARSANULFO")
else:
	print("EMPATE")
	
			
-- ERROR:
File "XXXX", line 10
    if((e[i]==11)and(b[i]==22):
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 16:18:38) 
-- CODE:
from numpy import*

e=array(eval(input("sequencia de eusabia; ")))
b=array(eval(input("sequencia de barsavo ")))
i=0
ce=0
cb=0

while (i<size(e)):
	if((e[i]==11)and(b[i]==22)):
		 cb=cb+1
	elif((e[i]==11)and(b[1]==33)):
		 ce=ce+1
	elif((e[i]==22)and(b[i]==11)):
		 ce=ce+1
	elif((e[i]==22)and(b[i]==33)):
		 cb=cb+1
	elif ((e[i]==33)and(b[i]==11)):
		 cb=cb+1
	elif((e[i]==33)and(b[i]==22)):
		 ce=ce+1
	elif((e[i]==33)and(b[i]==22)):
			ce=ce+0
			cb=cb+0
print (size(e))
if(ce>cb):
	print("EUSAPIA")
elif(cb>ce):
	print("BARSANULFO")
else:
	print("EMPATE")
	
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 16:33:16) 
-- CODE:
from numpy import*

e=array(eval(input("sequencia de eusabia; ")))
b=array(eval(input("sequencia de barsavo ")))
i=0
ce=0
cb=0

while (i<size(e)):
	if((e[i]==11)and(b[i]==22)):
		 cb=cb+1
	elif((e[i]==11)and(b[1]==33)):
		 ce=ce+1
	elif((e[i]==22)and(b[i]==11)):
		 ce=ce+1
	elif((e[i]==22)and(b[i]==33)):
		 cb=cb+1
	elif ((e[i]==33)and(b[i]==11)):
		 cb=cb+1
	elif((e[i]==33)and(b[i]==22)):
		 ce=ce+1
	elif((e[i]==33)and(b[i]==22)):
			ce=ce+0
			cb=cb+0
print (size(e))
if(ce>cb):
	print("EUSAPIA")
elif(cb>ce):
	print("BARSANULFO")
else:
	print("EMPATE")
	
			
-- EXECUTION TIME:
873.746
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:

-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
OCI runtime exec failed: exec failed: container_linux.go:296: starting container process caused "process_linux.go:86: executing setns process caused \"exit status 21\"": unknown
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
OCI runtime exec failed: exec failed: container_linux.go:296: starting container process caused "process_linux.go:86: executing setns process caused \"exit status 21\"": unknown
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 16:33:17) 
-- CODE:
from numpy import*

e=array(eval(input("sequencia de eusabia; ")))
b=array(eval(input("sequencia de barsavo ")))
i=0
ce=0
cb=0

while (i<size(e)):
	if((e[i]==11)and(b[i]==22)):
		 cb=cb+1
	elif((e[i]==11)and(b[1]==33)):
		 ce=ce+1
	elif((e[i]==22)and(b[i]==11)):
		 ce=ce+1
	elif((e[i]==22)and(b[i]==33)):
		 cb=cb+1
	elif ((e[i]==33)and(b[i]==11)):
		 cb=cb+1
	elif((e[i]==33)and(b[i]==22)):
		 ce=ce+1
	elif((e[i]==33)and(b[i]==22)):
			ce=ce+0
			cb=cb+0
print (size(e))
if(ce>cb):
	print("EUSAPIA")
elif(cb>ce):
	print("BARSANULFO")
else:
	print("EMPATE")
	
			
-- EXECUTION TIME:
855.108
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:

-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 16:33:17) 
-- CODE:
from numpy import*

e=array(eval(input("sequencia de eusabia; ")))
b=array(eval(input("sequencia de barsavo ")))
i=0
ce=0
cb=0

while (i<size(e)):
	if((e[i]==11)and(b[i]==22)):
		 cb=cb+1
	elif((e[i]==11)and(b[1]==33)):
		 ce=ce+1
	elif((e[i]==22)and(b[i]==11)):
		 ce=ce+1
	elif((e[i]==22)and(b[i]==33)):
		 cb=cb+1
	elif ((e[i]==33)and(b[i]==11)):
		 cb=cb+1
	elif((e[i]==33)and(b[i]==22)):
		 ce=ce+1
	elif((e[i]==33)and(b[i]==22)):
			ce=ce+0
			cb=cb+0
print (size(e))
if(ce>cb):
	print("EUSAPIA")
elif(cb>ce):
	print("BARSANULFO")
else:
	print("EMPATE")
	
			
-- EXECUTION TIME:
854.175
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:

-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 16:33:17) 
-- CODE:
from numpy import*

e=array(eval(input("sequencia de eusabia; ")))
b=array(eval(input("sequencia de barsavo ")))
i=0
ce=0
cb=0

while (i<size(e)):
	if((e[i]==11)and(b[i]==22)):
		 cb=cb+1
	elif((e[i]==11)and(b[1]==33)):
		 ce=ce+1
	elif((e[i]==22)and(b[i]==11)):
		 ce=ce+1
	elif((e[i]==22)and(b[i]==33)):
		 cb=cb+1
	elif ((e[i]==33)and(b[i]==11)):
		 cb=cb+1
	elif((e[i]==33)and(b[i]==22)):
		 ce=ce+1
	elif((e[i]==33)and(b[i]==22)):
			ce=ce+0
			cb=cb+0
print (size(e))
if(ce>cb):
	print("EUSAPIA")
elif(cb>ce):
	print("BARSANULFO")
else:
	print("EMPATE")
	
			
-- EXECUTION TIME:
853.943
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:

-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 16:33:17) 
-- CODE:
from numpy import*

e=array(eval(input("sequencia de eusabia; ")))
b=array(eval(input("sequencia de barsavo ")))
i=0
ce=0
cb=0

while (i<size(e)):
	if((e[i]==11)and(b[i]==22)):
		 cb=cb+1
	elif((e[i]==11)and(b[1]==33)):
		 ce=ce+1
	elif((e[i]==22)and(b[i]==11)):
		 ce=ce+1
	elif((e[i]==22)and(b[i]==33)):
		 cb=cb+1
	elif ((e[i]==33)and(b[i]==11)):
		 cb=cb+1
	elif((e[i]==33)and(b[i]==22)):
		 ce=ce+1
	elif((e[i]==33)and(b[i]==22)):
			ce=ce+0
			cb=cb+0
print (size(e))
if(ce>cb):
	print("EUSAPIA")
elif(cb>ce):
	print("BARSANULFO")
else:
	print("EMPATE")
	
			
-- EXECUTION TIME:
853.802
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:

-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 16:33:17) 
-- CODE:
from numpy import*

e=array(eval(input("sequencia de eusabia; ")))
b=array(eval(input("sequencia de barsavo ")))
i=0
ce=0
cb=0

while (i<size(e)):
	if((e[i]==11)and(b[i]==22)):
		 cb=cb+1
	elif((e[i]==11)and(b[1]==33)):
		 ce=ce+1
	elif((e[i]==22)and(b[i]==11)):
		 ce=ce+1
	elif((e[i]==22)and(b[i]==33)):
		 cb=cb+1
	elif ((e[i]==33)and(b[i]==11)):
		 cb=cb+1
	elif((e[i]==33)and(b[i]==22)):
		 ce=ce+1
	elif((e[i]==33)and(b[i]==22)):
			ce=ce+0
			cb=cb+0
print (size(e))
if(ce>cb):
	print("EUSAPIA")
elif(cb>ce):
	print("BARSANULFO")
else:
	print("EMPATE")
	
			
-- EXECUTION TIME:
853.163
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:

-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:

-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-28 02:29:36) 
-- CODE:
from numpy import*

v = array(eval(input("Jogadas de Eusapia: ")))
b = array(eval(input("Jogadas de Barsanulfo: ")))

p=0
ve=0
vb=0

while(p < size(v) and p < size(b)):
	vj = v[p]
	bj = b[p]
	p = p + 1

	if (vj == 11 and bj == 33):
		ve = ve + 1
	if (vj == 11 and bj == 22):
		vb = vb + 1
	if (vj == 22 and bj == 11):
		ve = ve + 1
	if (vj == 22 and bj == 33):
		vb = vb + 1
	if (vj == 33 and bj == 11):
		vb = vb + 1
	if (vj == 33 and bj == 22):
		ve = ve + 1

print(size(v))
if (vb < ve):
	print("EUSAPIA")
elif (vb > ve):
	print("BARSANULFO")
elif (vb == ve):
	print ("EMPATE")
-- EXECUTION TIME:
0.882215
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
